--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.32.1",
     "@types/geojson": "^7946.0.14",
     "@types/leaflet": "^1.9.12",
     "axios": "^1.7.2",
@@ -20,6 +21,8 @@
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-intersection-observer": "^9.10.3",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
