--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.32.1",
     "@types/geojson": "^7946.0.14",
