--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^9.10.3",
     "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "redux": "^5.0.1",
